--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
