--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.52.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
     "react-slick": "^0.30.2",
+    "react-text-transition": "^3.1.0",
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0"
