--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.52.0",
     "@nextui-org/accordion": "^2.0.38",
+    "@tanstack/react-query": "^5.52.0",
+    "axios": "^1.7.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-intersection-observer": "^9.13.0",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
     "react-text-transition": "^3.1.0",
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
