--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/accordion": "^2.0.38",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.4",
     "next": "14.2.5",
@@ -17,9 +18,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-intersection-observer": "^9.13.0",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "react-text-transition": "^3.1.0",
+    "redux": "^5.0.1",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
